@@ -85,7 +85,9 @@ Abbreviated Changelog from 2.3.5 Final
 - Added so inputCharacterEncoding can be different for cms and deliver i application settings. No more need to mess around in web.xml for that.
 - Made ContentSort tag accept a custom comparator - very neat - now you can have InfoGlue use your own custom class for sorting. If the comparator implements TemplateControllerAwareComparator it can also use the templateController-object for lookups in InfoGlue. 
 - Fixed a bug which made old page binding be valid if newer versions of a sitenode does not have that binding. Now it should work fine again. This bug only concerned people building sites the old way without components.
-
+- Added better nullchecks for sites that for some reason have pages which has no versions. Only happens when old sites are being upgraded. New sites (build with 2.0 and above) does not have such pages. 
+- Removed reference between ServiceDefinition and it's ServiceBindings as no queries go that way and it affects performance to much. Should make no difference to anyone.
+ 
 -------------------------------------------------------------------------------------
 - InfoGlue 2.3.5 Final
 -------------------------------------------------------------------------------------
